--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -14,24 +14,32 @@
   </ion-header>
 
   @if(imageReady()) {
-    <ion-card>
-
-      <img [src]="imageUrl()" alt="Imagen seleccionada" />
-     
-      <!-- CARGA DE PREDICCIÓN - INICIO -->
-     
-      <!-- CARGA DE PREDICCIÓN - FIN -->
-
-    </ion-card>
+  <ion-card>
+    <img #image [src]="imageUrl()" alt="Imagen seleccionada" />
+    @if(modelLoaded()) {
+    <div class="ion-text-center ion-padding-top ion-padding-bottom">
+      <ion-button fill="outline" color="success" (click)="predict()">Predecir</ion-button>
+    </div>
+    <ion-list>
+      <ion-item>
+        <ion-label>Clases: {{ classLabels }} </ion-label>
+      </ion-item>
+      @for (item of predictions; track $index) {
+      <ion-item>
+        <ion-label> {{ item?.className }} : {{ item?.probability | percent }} </ion-label>
+      </ion-item>
+      }
+    </ion-list>
+    }
+  </ion-card>
   }
 
-  <input #fileInput type="file" accept="image/*" (change)="onFileSelected($event)" hidden/>
+  <input #fileInput type="file" accept="image/*" (change)="onFileSelected($event)" hidden />
 
   <ion-fab slot="fixed" vertical="bottom" horizontal="center">
     <ion-fab-button (click)="fileInput.click()">
       <ion-icon name="cloud-upload-outline"></ion-icon>
-  </ion-fab-button>
+    </ion-fab-button>
   </ion-fab>
 
 </ion-content>
-
