feat: camera support

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -34,11 +34,9 @@
   </ion-card>
   }
 
-  <input #fileInput type="file" accept="image/*" (change)="onFileSelected($event)" hidden />
-
   <ion-fab slot="fixed" vertical="bottom" horizontal="center">
-    <ion-fab-button (click)="fileInput.click()">
-      <ion-icon name="cloud-upload-outline"></ion-icon>
+    <ion-fab-button (click)="openCamera()">
+      <ion-icon name="camera-outline"></ion-icon>
     </ion-fab-button>
   </ion-fab>
 
