feat: flower comments page

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -4,7 +4,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Identificar planta
+      Identificar flor
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -12,7 +12,7 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Identificar planta</ion-title>
+      <ion-title size="large">Identificar flor</ion-title>
     </ion-toolbar>
   </ion-header>
 
@@ -23,13 +23,19 @@
     <div class="ion-text-center ion-padding-top ion-padding-bottom">
       <ion-button fill="outline" color="success" (click)="requestPrediction()">Identificar</ion-button>
     </div>
-    <ion-list>
-      @for (item of predictions; track $index) {
-      <ion-item>
-        <ion-label> {{ item?.className }} : {{ item?.probability | percent }} </ion-label>
-      </ion-item>
-      }
-    </ion-list>
+    @if(predictions.length > 0) {
+    <ion-text>
+      <h2>{{ predictions[0].className }}</h2>
+    </ion-text>
+    <ion-text>
+      <h4>{{ predictions[0].probability | percent }} de encaje</h4>
+    </ion-text>
+    <div class="ion-text-center ion-padding-top ion-padding-bottom">
+      <ion-button routerLink="/comments" [state]="{ flower: predictions[0].className}">
+        VER COMENTARIOS
+      </ion-button>
+    </div>
+    }
     }
   </ion-card>
   }
