--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,60 +1,35 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Retroalimentación
+      Feed principal
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
+  <p>Estas noticias o lo que sea deben ser requeridas del firebase,
+    crear una colección en la DB llamada feed y agregarle items con titulo, contenido
+    y si pueden una imagen.
 
+    iterar sobre el arreglo loadData para crear una tarjeta para cada item de la coleccion feed.
+  </p>
+
+  
   <ion-card class="ion-padding-bottom ion-margin-bottom">
-
     <ion-card-header>
-      <ion-card-title>Su opinión es importante</ion-card-title>
+      Tarjeta 1
     </ion-card-header>
-
-    <ion-card-content class="ion-text-center">
-
-      <form [formGroup]="myForm" (ngSubmit)="onSubmit()">
-
-        <ion-select formControlName="score" label="Calificación" placeholder="Seleccione un valor">
-          <ion-select-option value="bueno">Bueno</ion-select-option>
-          <ion-select-option value="regular">Regular</ion-select-option>
-          <ion-select-option value="malo">Malo</ion-select-option>
-        </ion-select>
-
-        <ion-textarea formControlName="opinion" label="Opinión"
-          placeholder="Agregue aquí su descripción"></ion-textarea>
-
-        <ion-button type="submit" [disabled]="!myForm.valid">Enviar</ion-button>
-
-      </form>
-
+    <ion-card-content>
+      <p> contenido 1</p>
     </ion-card-content>
   </ion-card>
 
   <ion-card class="ion-padding-bottom ion-margin-bottom">
-
     <ion-card-header>
-      <ion-card-title>Opiniones</ion-card-title>
+      Tarjeta 2
     </ion-card-header>
-
     <ion-card-content>
-
-      <ion-list>
-
-        <!-- CARGA DE DATOS - INICIO -->
-        @for (datum of dataList; track $index) {
-        <ion-item>
-          <ion-label> {{ datum?.score }} </ion-label>
-          <ion-label> {{ datum?.opinion }} </ion-label>
-        </ion-item>
-        }
-        <!-- CARGA DE DATOS - FIN -->
-
-      </ion-list>
-
+      <p> contenido 2</p>
     </ion-card-content>
   </ion-card>
 
