--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,18 +1,18 @@
 <ion-tabs>
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1" href="/tabs/tab1">
-      <ion-icon aria-hidden="true" name="rocket"></ion-icon>
-      <ion-label>Teachable Machine</ion-label>
+      <ion-icon aria-hidden="true" name="flower-outline"></ion-icon>
+      <ion-label>Identificar flor</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2" href="/tabs/tab2">
-      <ion-icon name="clipboard-outline"></ion-icon>
-      <ion-label>Opinión</ion-label>
+      <ion-icon name="home-outline"></ion-icon>
+      <ion-label>Feed principal</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3" href="/tabs/tab3">
       <ion-icon name="people-circle"></ion-icon>
-      <ion-label>Acerca de</ion-label>
+      <ion-label>Acerca del grupo</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
