doc: development comments

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -40,6 +40,8 @@
   </ion-card>
   }
 
+  <p>poner alguna bienvenida, instrucciones o algo</p>
+
   <ion-fab slot="fixed" vertical="bottom" horizontal="center">
     <ion-fab-button (click)="openCamera()">
       <ion-icon name="camera-outline"></ion-icon>
