--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -11,3 +11,101 @@ ion-button {
 ion-text {
     text-align: center;
 }
+
+ion-toolbar {
+    --background: #4caf50;
+}
+
+ion-title {
+    font-size: 2rem;
+    color: #ffffff;
+    font-weight: bold;
+}
+
+.card-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 15px;
+    margin: 15px;
+}
+
+
+
+ion-card {
+    flex: 1;
+    min-width: 250px;
+    max-width: 48%;
+    border-radius: 12px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    padding: 15px;
+    transition: all 0.3s ease;
+    display: flex;
+    flex-direction: column;
+
+    &:hover {
+        transform: translateY(-5px);
+        box-shadow: 0 6px 18px rgba(0, 0, 0, 0.15);
+    }
+
+    &.card-center {
+        &:hover {
+          transform: none; 
+          box-shadow: none; 
+        }
+      }
+
+    ion-card-content {
+        font-size: 1rem;
+
+        h2 {
+            font-size: 1.2rem;
+            color: #388e3c;
+            margin-bottom: 10px;
+            font-weight: bold;
+        }
+
+        ul,
+        ol {
+            padding-left: 20px;
+            list-style: inside;
+
+            li {
+                margin-bottom: 8px;
+            }
+
+            b {
+                color: #388e3c;
+            }
+        }
+    }
+}
+
+ion-fab-button {
+    --background: #81c784;
+    --border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    ion-icon {
+        font-size: 28px;
+    }
+    
+}
+
+ion-button {
+    --background: #81c784;
+    
+}
+
+.card-center{
+    width:90%;
+    display:block;
+    margin: 0 auto;
+    img{
+        height: 100%;
+    }
+    h2{
+        font-style: bold;
+        color:#4caf50;
+    }
+}
