--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,26 +1,61 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Acerca de
+      FloraScan
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true" class="ion-padding">
 
+  <ion-header collapse="condense">
+    <ion-toolbar>
+      <ion-title size="large">FloraScan</ion-title>
+    </ion-toolbar>
+  </ion-header>
+
   <ion-card>
     <ion-card-header>
-
-      <ion-card-title class="titulo">Descripción</ion-card-title>
-       
+      <ion-card-title>Acerca de FloraScan</ion-card-title>
     </ion-card-header>
-     
     <ion-card-content>
-      <p id="descripcion">
-      Una aplicación móvil desarrollada en Angular Ionic es un software multiplataforma que utiliza el framework Angular para construir la lógica y la estructura de la aplicación, junto con el framework Ionic para crear una interfaz de usuario atractiva y funcional. Ionic proporciona componentes y herramientas para diseñar aplicaciones que se sienten y se ven nativas en dispositivos iOS y Android. La aplicación se puede desplegar tanto en la web como en tiendas de aplicaciones móviles. Utiliza tecnologías web como HTML, CSS y JavaScript, lo que facilita la reutilización de código y la implementación rápida.
+      <p>
+        FloraScan es una aplicación híbrida que reconoce flores al instante usando inteligencia artificial. Además de identificar el tipo de flor y su porcentaje de coincidencia, los usuarios pueden compartir consejos sobre su cuidado y consultar recomendaciones de la comunidad. Esta herramienta fomenta la conexión con la naturaleza, el aprendizaje práctico y la colaboración.
       </p>
     </ion-card-content>
+  </ion-card>
 
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Tecnologías Utilizadas</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <p>
+        <b>Teachable Machine</b>, <b>Firebase</b>, <b>Ionic</b>, <b>Angular</b>, y <b>Android Studio</b>.
+      </p>
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Equipo del Proyecto</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <p>
+        Hailie Jiménez, José Julio Suárez, Jesús Suárez.
+      </p>
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Propósito del Proyecto</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <p>
+        Conectar a las personas con la naturaleza, promover la educación ambiental y facilitar el intercambio de conocimientos mediante el uso de tecnología moderna.
+      </p>
+    </ion-card-content>
   </ion-card>
 
 </ion-content>
